Rebuilt user-service and implemented JWTs